fix content overflow with big link addresses

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -975,7 +975,8 @@ div.card {
             text-align: left !important;
         }
         p.content {
-            overflow: auto;
+            overflow-y: auto;
+            overflow-x: hidden;
             max-height: 400px;
             font-size: 16px;
             line-height: 20px;
@@ -2259,7 +2260,8 @@ div.card {
             text-align: left !important;
         }
         p.content {
-            overflow: auto;
+            overflow-y: auto;
+            overflow-x: hidden;
             max-height: 400px;
             font-size: 16px;
             line-height: 20px;
